--- a/ProjectSearch/ProjectSearch.csproj
+++ b/ProjectSearch/ProjectSearch.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="DisplayCard.aspx" />
+    <Content Include="GenerateBingoCard.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -79,6 +80,13 @@
     </Compile>
     <Compile Include="DisplayCard.aspx.designer.cs">
       <DependentUpon>DisplayCard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="GenerateBingoCard.aspx.cs">
+      <DependentUpon>GenerateBingoCard.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="GenerateBingoCard.aspx.designer.cs">
+      <DependentUpon>GenerateBingoCard.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
